# python-in-data-project

./: .gitignore  README.md  pyproject.toml
config/: paths.py
etl/: extract_data.py  load_data.py  transform_data.py
etl/extract_data/: extract_dimensions.py  extract_facts.py
etl/load_data/: load_dimensions.py  load_facts.py
etl/transform_data/: transform_facts.py
pipelines/: main.py
src/db/: config.py  connect.py
src/db/analysis/queries/: baseline_queries.sql  optimized_queries.sql
src/db/ddl/: indexes.sql  partition.sql  schema.sql
src/db/reports/: report_daily.sql  report_month.sql  report_order_status.sql  report_product.sql  report_seller_performance.sql
src/extract/: generate_data.py
src/load/db/: connect.py  fetch_data.py  insert_data.py  schema.sql
src/load/file/: saved_csv.py  write_csv.py
src/transform/: clean_data.py
src/utils/: constants.py  format_date.py
tests/: test_generate_data.py  test_transform_data.py
